@@ -258,7 +258,7 @@ function _nextIndex(currentIndex, numberResponses, repeatMode) {
         Math.min(currentIndex + 1, numberResponses - 1);
 }
 
-var responseProperties = ['content', 'contentType', 'statusCode'];
+var responseProperties = ['content', 'contentType', 'statusCode', 'headers'];
 var RoboHydraHeadStatic = roboHydraHeadType({
     name: 'static',
     defaultPropertyObject: {content: ''},
@@ -298,6 +298,7 @@ var RoboHydraHeadStatic = roboHydraHeadType({
                 },
                 handler: function(req, res) {
                     var content     = this.content,
+                        headers     = this.headers,
                         contentType = this.contentType,
                         statusCode  = this.statusCode;
                     if (this.responses !== undefined) {
@@ -313,6 +314,11 @@ var RoboHydraHeadStatic = roboHydraHeadType({
                     if (typeof(content) !== 'string') {
                         content = JSON.stringify(content);
                         contentType = contentType || 'application/json';
+                    }
+                    if (headers) {
+                        for (var h in headers) {
+                            res.headers[h.toLowerCase()] = headers[h];
+                        }
                     }
                     if (contentType) {
                         res.headers["content-type"] = contentType;
